# csound-nwjs

./: CMakeLists.txt  README.md  binding.gyp  jscsound.cpp  package.json  player.html  rebuild.bash
.github/workflows/: ci.yml
cmake/: FetchCsoundACCsoundThreaded.cmake
native/: package-lock.json  package.json
nwjs-launcher/: nwjs-launcher.html  package.json
